@@ -2,7 +2,9 @@
 - sql
     - got connection-bound metadata to work with implicit execution
     - cleanup to connection-bound sessions, SessionTransaction
-    
+- postgres
+    - fixed max identifier length (63) [ticket:571]
+
 0.3.9
 - general
     - better error message for NoSuchColumnError [ticket:607]
